--- a/index.html
+++ b/index.html
@@ -1,78 +1,110 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        body { font-family: sans-serif; text-align: center; background: #1a1a1a; color: white; padding-top: 50px; }
-        .controls { margin-bottom: 20px; }
-        input { padding: 12px; width: 350px; border-radius: 5px; border: none; font-size: 16px; }
-        button { padding: 12px 20px; border-radius: 5px; border: none; background: #ff0000; color: white; cursor: pointer; font-weight: bold; margin-left: 10px; }
-        button:hover { background: #cc0000; }
-        #player { border: 5px solid #333; border-radius: 10px; }
+        body { 
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+            text-align: center; 
+            color: white; 
+            padding: 20px;
+            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1658349061571-ec86557da69c?q=80&w=1025&auto=format&fit=crop');
+            background-size: cover; background-position: center; background-attachment: fixed; margin: 0; min-height: 100vh;
+        }
+
+        .controls { margin: 20px 0; }
+        input { padding: 12px; width: 250px; border-radius: 5px; border: none; background: rgba(255, 255, 255, 0.9); outline: none; }
+        button { padding: 12px 20px; border-radius: 5px; border: none; background: #ff0000; color: white; cursor: pointer; font-weight: bold; }
+
+        .video-container {
+            position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;
+            max-width: 800px; margin: 0 auto; border-radius: 10px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+        }
+        .video-container iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
+        /* CHAT STYLES */
+        #chat-container {
+            max-width: 800px; margin: 20px auto; background: rgba(0, 0, 0, 0.6);
+            border-radius: 10px; padding: 15px; text-align: left;
+        }
+        #chat-messages {
+            height: 200px; overflow-y: auto; border-bottom: 1px solid rgba(255,255,255,0.1);
+            margin-bottom: 10px; padding-bottom: 10px;
+        }
+        .message { margin-bottom: 8px; font-size: 14px; }
+        .message b { color: #ff4d4d; }
+        #chat-input { width: calc(100% - 100px); background: rgba(255,255,255,0.1); color: white; border: 1px solid #444; }
     </style>
 </head>
 <body>
     <div class="controls">
-        <input type="text" id="videoUrl" placeholder="Paste YouTube Link here...">
+        <input type="text" id="videoUrl" placeholder="YouTube Link...">
         <button onclick="changeVideo()">Change Video</button>
     </div>
     
-    <div id="player"></div>
+    <div class="video-container">
+        <div id="player"></div>
+    </div>
+
+    <div id="chat-container">
+        <div id="chat-messages"></div>
+        <input type="text" id="chat-input" placeholder="Type a message..." onkeypress="if(event.key === 'Enter') sendMessage()">
+        <button onclick="sendMessage()" style="padding: 10px; font-size: 12px;">Send</button>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
         var socket = io();
         var player;
+        var myName = prompt("What is your name?") || "Guest";
 
-        // 1. Load YouTube API
+        // 1. YouTube API Setup
         var tag = document.createElement('script');
         tag.src = "https://www.youtube.com/iframe_api";
         document.head.appendChild(tag);
 
-        // 2. Handle incoming video changes from the server
-        socket.on('sync_video', (data) => {
-            if (player && player.loadVideoById) {
-                player.loadVideoById(data.videoId);
-            } else {
-                window.pendingVideoId = data.videoId;
-            }
-        });
-
-        // 3. Initialize player
         function onYouTubeIframeAPIReady() {
             player = new YT.Player('player', {
-                height: '390',
-                width: '640',
-                videoId: window.pendingVideoId || 'dQw4w9WgXcQ', 
+                videoId: window.pendingVideoId || 'eQztz82Tgzk', 
                 events: { 'onStateChange': onPlayerStateChange }
             });
         }
 
-        // 4. Function to tell everyone to change video
-        function changeVideo() {
-            const url = document.getElementById('videoUrl').value;
-            // Simple logic to grab the ID from a link
-            const videoId = url.split('v=')[1]?.split('&')[0] || url.split('/').pop();
-            
-            if (videoId) {
-                socket.emit('change_video', { videoId: videoId });
+        // 2. CHAT FUNCTIONS
+        function sendMessage() {
+            const input = document.getElementById('chat-input');
+            if(input.value.trim() !== "") {
+                socket.emit('chat_message', { name: myName, text: input.value });
+                input.value = "";
             }
         }
 
-        // 5. Tell server when you play/pause
-        function onPlayerStateChange(event) {
-            socket.emit('video_action', { 
-                status: event.data, 
-                time: player.getCurrentTime() 
-            });
+        socket.on('display_message', (data) => {
+            const chatBox = document.getElementById('chat-messages');
+            chatBox.innerHTML += `<div class="message"><b>${data.name}:</b> ${data.text}</div>`;
+            chatBox.scrollTop = chatBox.scrollHeight; // Auto-scroll to bottom
+        });
+
+        // 3. VIDEO SYNC FUNCTIONS (Keep these as they were)
+        socket.on('sync_video', (data) => {
+            if (player && player.loadVideoById) player.loadVideoById(data.videoId);
+            else window.pendingVideoId = data.videoId;
+        });
+
+        function changeVideo() {
+            const url = document.getElementById('videoUrl').value;
+            const videoId = url.split('v=')[1]?.split('&')[0] || url.split('/').pop();
+            if (videoId) socket.emit('change_video', { videoId: videoId });
         }
 
-        // 6. Sync your player when friends play/pause
+        function onPlayerStateChange(event) {
+            socket.emit('video_action', { status: event.data, time: player.getCurrentTime() });
+        }
+
         socket.on('sync_action', (data) => {
             if (data.status === 1) player.playVideo();
             if (data.status === 2) player.pauseVideo();
-            if (Math.abs(player.getCurrentTime() - data.time) > 2) {
-                player.seekTo(data.time);
-            }
+            if (Math.abs(player.getCurrentTime() - data.time) > 2) player.seekTo(data.time);
         });
     </script>
 </body>
