--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         function onYouTubeIframeAPIReady() {
             player = new YT.Player('player', {
-                videoId: window.pendingVideoId || '_ykAXB3JFy4', 
+                videoId: window.pendingVideoId || 'JzS96auqau0', 
                 events: { 'onStateChange': onPlayerStateChange }
             });
         }
