--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             text-align: center; 
             color: white; 
             padding: 20px;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.unsplash.com/photo-1658349061571-ec86557da69c?q=80&w=1025&auto=format&fit=crop');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://www.shitpostbot.com/resize/585/400?img=%2Fimg%2Fsourceimages%2Fpoongko-shirtless-57bad2d020b9f.png');
             background-size: cover; background-position: center; background-attachment: fixed; margin: 0; min-height: 100vh;
         }
 
@@ -65,7 +65,7 @@
 
         function onYouTubeIframeAPIReady() {
             player = new YT.Player('player', {
-                videoId: window.pendingVideoId || 'JzS96auqau0', 
+                videoId: window.pendingVideoId || 'XKWbUJh3Nks', 
                 events: { 'onStateChange': onPlayerStateChange }
             });
         }
