--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             text-align: center; 
             color: white; 
             padding: 20px;
-            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://www.shitpostbot.com/resize/585/400?img=%2Fimg%2Fsourceimages%2Fpoongko-shirtless-57bad2d020b9f.png');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://i.ytimg.com/vi/Dj7mD9xpgoU/maxresdefault.jpg');
             background-size: cover; background-position: center; background-attachment: fixed; margin: 0; min-height: 100vh;
         }
 
