--- a/index.html
+++ b/index.html
@@ -10,11 +10,39 @@
             background-size: cover; background-position: center; background-attachment: fixed; margin: 0; min-height: 100vh;
         }
 
-        /* JOIN OVERLAY: Dim screen until they join the sync */
+        /* JOIN OVERLAY: Slightly transparent so you see the background */
         #sync-overlay {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0,0,0,0.9); z-index: 9999;
+            background: rgba(0,0,0,0.85); z-index: 9999;
             display: flex; flex-direction: column; justify-content: center; align-items: center;
+        }
+
+        /* THE PULSING BUTTON */
+        .join-btn {
+            font-size: 28px; 
+            padding: 25px 50px; 
+            background: #ff0000; 
+            color: white; 
+            border: none; 
+            border-radius: 10px;
+            cursor: pointer; 
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            box-shadow: 0 0 20px rgba(255, 0, 0, 0.5);
+            transition: transform 0.2s, box-shadow 0.2s;
+            animation: pulse-glow 2s infinite;
+        }
+
+        .join-btn:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 35px rgba(255, 0, 0, 0.9);
+        }
+
+        @keyframes pulse-glow {
+            0% { box-shadow: 0 0 10px rgba(255, 0, 0, 0.4); }
+            50% { box-shadow: 0 0 40px rgba(255, 0, 0, 0.8); }
+            100% { box-shadow: 0 0 10px rgba(255, 0, 0, 0.4); }
         }
 
         .controls { margin: 15px 0; }
@@ -38,8 +66,7 @@
 <body>
 
     <div id="sync-overlay">
-        <h2 style="margin-bottom: 20px;">READY TO WATCH?</h2>
-        <button onclick="joinTheBoyz()" style="font-size: 24px; padding: 20px 40px; background: #ff4d4d;">JOIN THE BOYZ</button>
+        <button class="join-btn" onclick="joinTheBoyz()">JOIN THE BOYZ</button>
     </div>
 
     <div class="controls">
@@ -69,14 +96,17 @@
     <script>
         var socket = io();
         var player;
+        var isSyncing = false; 
         var myName = localStorage.getItem('watchPartyName') || prompt("What is your name?") || "Guest";
         localStorage.setItem('watchPartyName', myName);
 
         function joinTheBoyz() {
             document.getElementById('sync-overlay').style.display = 'none';
-            // Force play if player is ready
+            isSyncing = true; 
             if(player && player.playVideo) {
                 player.playVideo();
+                // Deactivate shield after 3 seconds to allow buffer
+                setTimeout(() => { isSyncing = false; }, 3000);
             }
         }
 
@@ -133,18 +163,19 @@
         socket.on('sync_video', (data) => {
             if (player && player.loadVideoById) {
                 const currentId = player.getVideoData().video_id;
-                // NEW FIX: Now supports seeking immediately for newcomers
                 if (currentId !== data.videoId || data.forceSync) {
+                    isSyncing = true; 
                     player.loadVideoById({
                         videoId: data.videoId,
                         startSeconds: data.time || 0
                     });
-                    // Short delay to ensure video loads before playing
-                    setTimeout(() => { player.playVideo(); }, 1000);
+                    setTimeout(() => { 
+                        player.playVideo();
+                        setTimeout(() => { isSyncing = false; }, 2000);
+                    }, 1000);
                 }
             } else {
                 window.pendingVideoId = data.videoId;
-                window.pendingTime = data.time;
             }
         });
 
@@ -158,10 +189,9 @@
             if (event.data === YT.PlayerState.ENDED) {
                 socket.emit('next_video'); 
             }
-            // Auto-kick if stuck
-            if (event.data === YT.PlayerState.UNSTARTED) {
-                player.playVideo();
-            }
+            
+            if (isSyncing) return;
+
             socket.emit('video_action', { 
                 status: event.data, 
                 time: player.getCurrentTime() 
@@ -169,7 +199,7 @@
         }
 
         socket.on('sync_action', (data) => {
-            if (!player) return;
+            if (!player || isSyncing) return; 
             if (data.status === 1) player.playVideo();
             if (data.status === 2) player.pauseVideo();
             if (Math.abs(player.getCurrentTime() - data.time) > 2) {
